# runtime-vm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_parser.sh  env_setup.sh  lexer_build_test.sh
.github/workflows/: build-mem-check.yml  release.yml
docs/: BYTECODE.md  CONSTANT_POOL.md  DEPLOYMENT.md  GC.md  INTEREPRETER.md  INTERMEDIATE_LANGUAGE.md  PARSER.md  STACK_ARCHITECTURE.md  VM.md
examples/basic/: OLD.md
examples/lang/: LANG.md  test.rvm  test.rvmc
examples/new_draft/: main.rvmc  main.utf8.rvmc
examples/new_encoding/: NEW.md  main.rvmc  main.utf8.rvmc
examples/oop/: OOP_EXAMPLE.md
src/: arc.c  arc.h  bytecode.c  bytecode.h  class.c  class.h  common_properties.h  constantpool.c  constantpool.h  main.c  stack_vm.c  stack_vm.h
src/builder/: ir_builder.c  ir_builder.h
src/class/: class.h
src/class/builder/: builder.c  builder.h
src/class/generator/: generator.c  generator.h
src/class/loader/: loader.c  loader.h
src/data_access/: flags.h
src/engine/: interpreter.c  interpreter.h
src/lexer/: lex.yy.c  lexer.l
src/methods/: method_reference.h
src/parse/: common.h  parser.tab.c  parser.tab.h  parser.y  traversal.c  traversal.h
src/utilities/: disassembler.c  util_build_binary.py
src/vtable/: VTABLE.md  vtable.h
tests/: basic_test.c  test_framework.h
